--- a/ImagesUI/app/src/main/res/layout/activity_main.xml
+++ b/ImagesUI/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,11 @@
         android:layout_centerInParent="true"
         android:src="@mipmap/meicode" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
 
 </RelativeLayout>
